--- a/WeatherApp/WA-Front/Resources/Styles/Styles.xaml
+++ b/WeatherApp/WA-Front/Resources/Styles/Styles.xaml
@@ -5,7 +5,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
 
     <Style TargetType="ActivityIndicator">
-        <Setter Property="Color" Value="{StaticResource Primary}" />
+        <Setter Property="Color" Value="{StaticResource Accent}" />
     </Style>
 
     <Style TargetType="VerticalStackLayout">
